--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -21,3 +21,30 @@
         transition: cubic-bezier(0.075, 0.82, 0.165, 1) 225ms all;
     }
 }
+
+.modal-wave {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.97);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+    pointer-events: none;
+    opacity: 0;
+    visibility:hidden;
+    transition: ease-in-out 500ms all;
+
+    img{
+        position: relative;
+        z-index: 1001;
+    }
+    &.active{
+        pointer-events: fill;
+        opacity: 1;
+        visibility: visible;
+    }
+}
