--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -576,10 +576,90 @@ textarea {
 
 .game .card {
   padding: 0;
+  perspective: 1000px;
+  border: none;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
 }
 
 .game .card button {
   padding: 25px;
+  background: inherit;
+  border: none;
+  height: 100%;
+  width: 100%;
+}
+
+.game .card .wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: all 800ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transform: rotateY(0deg);
+}
+
+.game .card .front, .game .card .back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.game .card .front {
+  background: lightblue;
+  z-index: 2;
+  transform: rotateY(0);
+}
+
+.game .card .back {
+  transform: rotateY(180deg);
+}
+
+.game .card .back span:after {
+  height: 80%;
+  width: 80%;
+  display: block;
+  left: 10%;
+  top: 10%;
+  position: absolute;
+  border-radius: 50%;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+  color: #fff;
+  font-size: 60px;
+  border: 3px solid #fff;
+}
+
+.game .card.active .wrapper {
+  transform: rotateY(180deg);
+}
+
+.game .card.active.one .back {
+  background: #0056b3;
+}
+
+.game .card.active.one .back span:after {
+  background: #17a2b8;
+  content: '1';
+}
+
+.game .card.active.two .back {
+  background: #673AB7;
+}
+
+.game .card.active.two .back span:after {
+  background: #2f1264;
+  content: '2';
 }
 
 .content {
