--- a/src/scss/partials/_game.scss
+++ b/src/scss/partials/_game.scss
@@ -1,9 +1,91 @@
 .game{
     .card{
         padding: 0;
+        perspective: 1000px;
+        border: none;
+        box-shadow: 1px 1px 10px rgba(0,0,0,0.5);
+        width: 150px;
+        height: 150px;
+        overflow: hidden;
        
         button{
             padding: 25px;
+            background: inherit;
+            border: none;
+            height: 100%;
+            width: 100%;
+        }
+        
+        .wrapper{
+            position:relative;
+            width: 100%;
+            height: 100%    ;
+            transform-style: preserve-3d;
+            transition: all 800ms cubic-bezier(0.680, -0.550, 0.265, 1.550);
+            transform:rotateY(0deg);
+        }
+
+        .front,.back{
+            position:absolute;
+            top:0;
+            left:0;
+            width:100%;
+            height:100%;
+            backface-visibility:hidden;
+        }
+
+        .front{
+            background:lightblue;
+            z-index:2;
+            transform: rotateY(0);
+        }
+        .back{
+            transform: rotateY(180deg);
+            span:after{
+                height: 80%;
+                width: 80%;
+                display: block;
+                left: 10%;
+                top: 10%;
+                position: absolute;
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: #fff;
+                font-size: 60px;
+                border: 3px solid #fff;
+            }
+        }
+
+        &.active{
+            .wrapper{
+                transform:rotateY(180deg);
+            }
+
+            &.one{
+                .back{
+                    background:#0056b3;
+
+                    span:after{
+                        background: #17a2b8;
+                        content: '1'; 
+                    }
+                }
+            }
+            
+            &.two{
+                .back{
+                    background:#673AB7;
+                    
+                    span:after{
+                        background: #2f1264; 
+                        content: '2'; 
+                    }
+                }
+            }
+
+
         }
     }
 }
