--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -548,7 +548,7 @@ textarea {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.97);
   display: -ms-flexbox;
   display: flex;
@@ -570,6 +570,38 @@ textarea {
 
 .modal-wave.active {
   pointer-events: fill;
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal-congratz {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+  background-color: rgba(0, 0, 0, 0.97);
+  z-index: 1000;
+  pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
+  transition: ease-in-out 500ms all;
+  color: #fff;
+}
+
+.modal-congratz img {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.modal-congratz.active {
   opacity: 1;
   visibility: visible;
 }
@@ -660,6 +692,10 @@ textarea {
 .game .card.active.two .back span:after {
   background: #2f1264;
   content: '2';
+}
+
+.game .card.active.non-click {
+  pointer-events: none;
 }
 
 @font-face {
