--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -27,7 +27,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: rgba(0,0,0,0.97);
     display: flex;
     align-items: center;
@@ -47,4 +47,33 @@
         opacity: 1;
         visibility: visible;
     }
+}
+
+.modal-congratz {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+	justify-content: center;
+	background-color: rgba(0,0,0,0.97);
+    z-index: 1000;
+    pointer-events: none;
+    opacity: 0;
+    visibility:hidden;
+	transition: ease-in-out 500ms all;
+	color: #fff;
+
+	img{
+		margin-left: auto;
+		margin-right: auto;
+		display: block;
+	}
+
+	&.active{
+		opacity: 1;
+		visibility: visible;
+	}
 }
